# camassist

./: CMakeLists.txt  README.md
include/FCam/: DNG.h  Demosaic.h  Dump.h  Event.h  FCam.h  Frame.h  JPEG.h  TIFF.h  TSQueue.h
src/: AsyncFile.cpp  AutoExposure.cpp  AutoFocus.cpp  AutoWhiteBalance.cpp  DNG.cpp  Demosaic.cpp  Dump.cpp  Event.cpp  Flash.cpp  Frame.cpp  Image.cpp  JPEG.cpp  Lens.cpp  Sensor.cpp  Shot.cpp  TIFF.cpp  TIFFTags.cpp  Time.cpp
